add some layout to login page

--- a/client/src/styles/components/Login.scss
+++ b/client/src/styles/components/Login.scss
@@ -1,5 +1,11 @@
 .login-container {
-  min-height: calc(100vh - 30px);
-  background: url('~@/assets/ds1.jpg') no-repeat fixed center;
-  background-size: cover;
+  min-height: calc(100vh);
+  background: url('~@/assets/ds1.jpg') no-repeat fixed center black;
+  background-size: contain;
+}
+
+@media screen and (max-width: 768px) {
+  .login-container {
+
+  }
 }
