--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,3 +1,7 @@
 @import url('https://stackpath.bootstrapcdn.com/bootswatch/4.2.1/simplex/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css?family=Russo+One');
-
+@import url('https://fonts.googleapis.com/css?family=Baloo');
+@font-face {
+  font-family:"PinkFloydFont";
+  src: url("/assets/floyd.TFF") format("truetype");
+}
