fix canvas positioning

--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -1,8 +1,6 @@
 .navbar-container {
   &__navbar {
-    background-color: black !important;
-    border-color: black !important;
-    border-bottom: solid 1px white !important;
+    border-bottom: solid 1px white;
     font-family: 'Baloo', cursive;
     padding: 0 150px;
     width: 100%;
