--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -7,5 +7,15 @@
 }
 #app {
   min-height: 100vh;
-  background-color: black;
+  background: url('~@/assets/ds1.jpg') no-repeat fixed center black;
+  background-size: contain;
+}
+#content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  overflow: hidden;
 }
