--- a/client/src/styles/components/Login.scss
+++ b/client/src/styles/components/Login.scss
@@ -5,14 +5,20 @@
 
   &__form {
     background-color: $light_color;
-    opacity: 0.9;
     width: 400px;
     border-radius: 5px;
     height: 100%;
     padding: 30px;
     margin-top: 100px;
     color: white;
-    box-shadow: 1px 1px 1px 1px #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    &__fb-btn {
+      @extend .loginBtn;
+      @extend .loginBtn--facebook;
+    }
     &__header {
       text-align: center;
       padding-bottom: 30px;
