--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,7 +1,7 @@
 @import url('https://stackpath.bootstrapcdn.com/bootswatch/4.2.1/simplex/bootstrap.min.css');
 @import "fonts.scss";
 @import "colors.scss";
-
+@import "buttons.scss";
 * {
   font-family: 'Baloo', cursive;
 }
