--- a/client/src/styles/fonts.scss
+++ b/client/src/styles/fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Russo+One');
+@import url('https://fonts.googleapis.com/css?family=Capriola');
 @import url('https://fonts.googleapis.com/css?family=Baloo');
 @font-face {
   font-family:"PinkFloydFont";
