--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -2,6 +2,7 @@
 @import "fonts.scss";
 @import "colors.scss";
 @import "buttons.scss";
+
 #app {
   min-height: 100vh;
   background: url('~@/assets/ds1.jpg') no-repeat fixed center black;
@@ -15,4 +16,5 @@
   bottom: 0;
   z-index: 2;
   overflow: hidden;
+  font-family: 'Capriola', sans-serif;
 }
