--- a/client/src/styles/components/Chat.scss
+++ b/client/src/styles/components/Chat.scss
@@ -9,7 +9,7 @@
       right: 0;
       left: 0;
       bottom: 0;
-      background: rgba(10,10,10,0.5);
+      background: rgba(255, 255, 255, 0.159);
     }
     &__messages {
       min-height: calc(100vh - 135px);
