--- a/client/src/styles/buttons.scss
+++ b/client/src/styles/buttons.scss
@@ -45,3 +45,16 @@
   background-color: #5B7BD5;
   background-image: linear-gradient(#5B7BD5, #4864B1);
 }
+
+%custom-button {
+  color: white;
+  background: transparent;
+  border: 1px solid white;
+  &:hover {
+    color: black;
+    background: white;
+  }
+}
+
+
+
