--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -2,21 +2,37 @@
   &__navbar {
     border-bottom: solid 1px white;
     font-family: 'Baloo', cursive;
-    padding: 0 150px;
+    padding: 0 50px;
     width: 100%;
+
+    &__auth-links {
+      padding-left: 30px;
+    }
+
     &__brand {
       display: flex;
       align-items: center;
       color: white !important;
       font-size: 25px;
+
       &__img {
         margin-right: 20px;
         width: 40px;
         height: 40px;
       }
     }
+
     &__button {
       @extend %custom-button
+    }
+
+    &__link {
+      color: grey;
+      padding-right: 20px;
+      text-decoration: none;
+      &:hover {
+        color: white;
+      }
     }
   }
 }
@@ -25,8 +41,10 @@
   .navbar-container {
     &__navbar {
       padding: 0 20px;
+
       &__brand {
         font-size: 18px;
+
         &__img {
           margin-right: 10px;
           width: 30px;
