--- a/client/src/styles/buttons.scss
+++ b/client/src/styles/buttons.scss
@@ -48,7 +48,7 @@
 
 %custom-button {
   color: white;
-  background: transparent;
+  background: black;
   border: 1px solid white;
   &:hover {
     color: black !important;
