--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -2,6 +2,7 @@
 @import "fonts.scss";
 @import "colors.scss";
 @import "buttons.scss";
+@import "inputs.scss";
 
 .active-page {
   color: white !important;
