text change on find

--- a/client/src/styles/components/Chat.scss
+++ b/client/src/styles/components/Chat.scss
@@ -61,7 +61,9 @@
     align-items: center;
     flex-direction: column;
     color: white;
-
+    &__loader {
+      margin-top: 20px;
+    }
     &__message {
       font-size: 26px;
     }
