--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -30,6 +30,8 @@
       color: grey;
       padding-right: 20px;
       text-decoration: none;
+      font-size: 16px;
+      margin: 0 10px;
       &:hover {
         color: white;
       }
