--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -53,6 +53,12 @@
           height: 30px;
         }
       }
+
+      &__link {
+        font-size: 13px;
+        padding-right: 0;
+
+      }
     }
   }
 }
