--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -4,6 +4,7 @@
     font-family: 'Baloo', cursive;
     padding: 0 50px;
     width: 100%;
+    height: 60px;
 
     &__auth-links {
       padding-left: 30px;
@@ -24,6 +25,14 @@
 
     &__button {
       @extend %custom-button
+    }
+
+    &__spotify-button {
+      @extend .loginBtn;
+      @extend .loginBtn--spotify;
+      &__image {
+        width: 30px;
+      }
     }
 
     &__link {
