--- a/client/src/styles/buttons.scss
+++ b/client/src/styles/buttons.scss
@@ -50,6 +50,7 @@
   border:0 !important;
   border-radius: 20px;
   padding: 0 20px;
+  margin: 0;
   font-size: 14px;
   color: black;
   height: 35px;
