--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -6,6 +6,11 @@
     width: 100%;
     height: 60px;
 
+    &__bars{
+      color: white;
+      display: none;
+    }
+
     &__auth-links {
       padding-left: 30px;
     }
@@ -50,8 +55,13 @@
 
 @media screen and (max-width: 768px) {
   .navbar-container {
+
     &__navbar {
       padding: 0 20px;
+
+      &__bars{
+        display: block;
+      }
 
       &__brand {
         font-size: 18px;
