--- a/client/src/styles/components/SideNav.scss
+++ b/client/src/styles/components/SideNav.scss
@@ -26,6 +26,7 @@
     display: flex;
     margin: 1em;
     border-radius: 20px;
+    @extend %custom-link;
 
     &__wrapper {
       display: flex;
