--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,2 +1,3 @@
 $header_color: black;
-$light_color: lighten($header-color, 10)
+$light_color: lighten($header-color, 10);
+$main-text-color: white;
