--- a/client/src/styles/views/homeview.scss
+++ b/client/src/styles/views/homeview.scss
@@ -6,7 +6,7 @@
   margin-top: 80px;
 
   &__slogan {
-    color: white;
+    color: $main-text-color;
     font-size: 40px;
     text-align: center;
     height: 100px;
