--- a/client/src/styles/components/TopTracks.scss
+++ b/client/src/styles/components/TopTracks.scss
@@ -10,15 +10,112 @@
     font-size: 24px;
     padding-bottom: 20px;
   }
-    &__track {
-      width: 200px!important;
+
+  &__track {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__container {
       &__img {
         width: 200px;
+        height: auto;
+
+        &:hover {
+          opacity: 0.5;
+          cursor: pointer;
+        }
       }
-      &__name {
-        width: 200px;
-        padding-top: 10px;
-        color: $main-text-color;
+    }
+
+    &__play {
+      position: absolute;
+      top: 28%;
+      width: 40px;
+      margin: 0 auto;
+      z-index: -1;
+
+      &__img {
+        width: 50px;
+        height: auto;
       }
+    }
+
+    &__name {
+      text-align: center;
+      width: 200px;
+      padding-top: 10px;
+      color: $main-text-color;
+    }
   }
 }
+
+.VueCarousel-navigation-button {
+  color: white !important;
+  border-color: black !important;
+  font-size: 35px;
+  top: 40% !important;
+  outline: 1px solid transparent !important;
+
+  &:hover {
+    color: $spotfiy-green-color !important;
+  }
+}
+
+.VueCarousel-dot {
+  outline: 1px solid transparent !important;
+  margin: 20px 5px !important;
+}
+
+@media screen and (max-width: 1280px) {
+  .toptracks {
+    &__track {
+      &__container {
+        &__img {
+          width: 150px;
+        }
+      }
+      &__name {
+        width: 150px;
+        font-size: 14px;
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .toptracks {
+    &__track {
+      &__container {
+        &__img {
+          width: 100px;
+        }
+      }
+      &__name {
+        width: 100px;
+        font-size: 12px;
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .toptracks {
+    &__track {
+      &__container {
+        &__img {
+          width: 100px;
+        }
+      }
+      &__name {
+        width: 100px;
+        font-size: 12px;
+      }
+    }
+  }
+
+}
+
+
