add new font awesome and some server refactorings

--- a/client/src/styles/components/SideNav.scss
+++ b/client/src/styles/components/SideNav.scss
@@ -38,7 +38,7 @@
       font-weight: 400;
       text-transform: uppercase;
       transition: all 0.3s ease-out;
-
+      white-space: nowrap;
       &__image {
         width: 18px;
         height: 18px;
