--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,7 +1,2 @@
 @import url('https://stackpath.bootstrapcdn.com/bootswatch/4.2.1/cyborg/bootstrap.min.css');
-@import "fonts.scss";
-@import "colors.scss";
-@import "buttons.scss";
-@import "inputs.scss";
-@import "links.scss";
-
+@import "ui-kit/index";
