--- a/client/src/styles/components/TopTracks.scss
+++ b/client/src/styles/components/TopTracks.scss
@@ -61,7 +61,7 @@
   outline: 1px solid transparent !important;
 
   &:hover {
-    color: $spotfiy-green-color !important;
+    color: $spotify-green-color !important;
   }
 }
 
