--- a/client/src/styles/ui-kit/colors.scss
+++ b/client/src/styles/ui-kit/colors.scss
@@ -1,4 +1,4 @@
 $header_color: black;
 $light_color: lighten($header-color, 10);
 $main-text-color: white;
-$spotfiy-green-color: #1db954
+$spotify-green-color: #1db954
