add custom alert component

--- a/client/src/styles/components/TopTracks.scss
+++ b/client/src/styles/components/TopTracks.scss
@@ -55,7 +55,7 @@
 
 .VueCarousel-navigation-button {
   color: white !important;
-  border-color: black !important;
+  border-color: transparent !important;
   font-size: 35px;
   top: 40% !important;
   outline: 1px solid transparent !important;
