--- a/client/src/styles/ui-kit/chat-bubble.scss
+++ b/client/src/styles/ui-kit/chat-bubble.scss
@@ -1,9 +1,9 @@
 .chat-bubble {
   border-radius: 7.5px;
-  padding: 6px 7px 8px 9px;
+  padding: 5px 10px;
   background-color: white;
   color: black !important;
   border: solid 1px #e6e6e6;
-  max-width: 80vw;
-  min-width: 100px;
+  max-width: 80%;
+  word-break: break-word;
 }
