chat bubble css update

--- a/client/src/styles/components/Chat.scss
+++ b/client/src/styles/components/Chat.scss
@@ -29,6 +29,8 @@
       color: $main-text-color;
       font-size: 13px;
       margin-bottom: 20px;
+      padding: 12px;
+      word-break: break-all;
       @extend .chat-bubble
     }
 
