--- a/client/src/styles/ui-kit/chat-bubble.scss
+++ b/client/src/styles/ui-kit/chat-bubble.scss
@@ -1,9 +1,8 @@
 .chat-bubble {
-  border-radius: 7.5px;
-  padding: 5px 10px;
-  background-color: white;
-  color: black !important;
-  border: solid 1px #e6e6e6;
+  background-image: linear-gradient(111deg, darken($spotify-green-color, 10), darken($spotify-green-color, 20));
+  border-radius: 20px 0 20px 20px;
+  color: white;
+  font-size: 13px;
+  font-weight: 600;
   max-width: 80%;
-  word-break: break-word;
 }
